--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "wlei117"  # 建议添加您的GitHub账号
+  github           : "wentaol86"  # 建议添加您的GitHub账号
   google_plus      :
   keybase          :
   instagram        :
